# scene_nvs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scene_nvs/: data_dashboard.py  main.py  test.py  train.py
scene_nvs/conf/: config.yaml
scene_nvs/conf/datamodule/: defaults.yaml
scene_nvs/conf/logger/: defaults.yaml
scene_nvs/conf/model/: defaults.yaml
scene_nvs/conf/render/: defaults.yaml
scene_nvs/conf/trainer/: defaults.yaml
scene_nvs/configs/: sd-scannetpp-finetune-c_concat-256.yaml
scene_nvs/configs/stable-diffusion-2-custom/scheduler/: scheduler_config.json
scene_nvs/data/: datamodule.py  dataset.py
scene_nvs/evaluation/: metrics.py
scene_nvs/ldm/: encodings.py  extras.py  model.py  util.py
scene_nvs/ldm/models/: autoencoder.py
scene_nvs/ldm/models/diffusion/: classifier.py  ddim.py  ddpm.py  plms.py  sampling_util.py
scene_nvs/ldm/modules/: attention.py  x_transformer.py
scene_nvs/ldm/modules/diffusionmodules/: model.py  openaimodel.py  util.py
scene_nvs/ldm/modules/distributions/: distributions.py
scene_nvs/ldm/modules/encoders/: modules.py
scene_nvs/ldm/modules/evaluate/: ssim.py  (+2 more)
scene_nvs/src/data/: dataloader.py
scene_nvs/src/utils/: timings.py
scene_nvs/utils/: camera_utils.py  checkpoint_cleanup.py  distributed.py  download_zero123pp_inference_weights.py  prerender_depth.py  prerender_rgb.py  render_utils.py  subsample_rgb_frames.py  timings.py  zero_to_fp32.py
scene_nvs/utils/dataset_preparation/: prepare_iphone_data.py  scene_release.py  scene_transfer_script.py  subsample_rgb_frames.py
(+4 files in other folders)
