[tool.poetry]
name = "scene-nvs"
version = "0.1.0"
description = "Code for ADL4CV"
authors = ["None"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "2.0.0"
torchvision = "^0.15.0"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
streamlit = "^1.28.1"
pandas = "^2.1.2"
pre-commit = "^3.5.0"
lightning = "^2.1.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
omegaconf = "^2.3.0"
wandb = "^0.16.0"
einops = "^0.7.0"
taming-transformers = "^0.0.1"
kornia = "^0.7.0"
transformers = "^4.35.0"
diffusers = "0.20.2"
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.1.1"
regex = "^2023.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
